--- a/p8105_hw2_NL2655.Rmd
+++ b/p8105_hw2_NL2655.Rmd
@@ -5,7 +5,59 @@ date: "2019/10/4"
 output: github_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+# Library
+
+```{r}
+library(tidyverse)
+library(readxl)
+```
+
+# Problem 1
+
+## improting data
+
+```{r}
+Trash_data = 
+  read_excel ("./Data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", sheet="Mr. Trash Wheel", range = cell_cols("A:N")) %>% 
+  janitor::clean_names() %>% 
+  drop_na(dumpster) %>% 
+mutate(
+  sports_balls = as.integer(pull(Trash_data, sports_balls)))
+```
+
+```{r}
+Pa_2017 =
+read_excel("Data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",sheet = "2017 Precipitation", range = "A2:B15")%>% 
+  janitor::clean_names() %>% 
+  drop_na(month) %>% 
+  mutate(
+    year = 2017
+  )
+Pa_2018 =
+  read_excel("Data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",sheet = "2018 Precipitation", range = "A2:B15") %>% 
+  janitor::clean_names() %>% 
+  drop_na(month) %>% 
+  mutate(
+    year = 2018
+  )
+Pa_17_18 = 
+  full_join(Pa_2017, Pa_2018, by = "month") %>% 
+  mutate(month = month.name)
+```
+
+```{r}
+pols_month = 
+  read_csv("Data/fivethirtyeight_datasets/pols-month.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(mon, c("year", "month", "day"))%>% 
+  mutate(
+    month = as.numeric(month),
+    month = month.name[month],
+  ) %>% 
+  pivot_longer(c(prez_gop,prez_dem),
+    names_to = "president",
+    names_prefix = "prez_"
+  ) %>% 
+  select(-day)
 ```
 
