--- a/p8105_hw2_NL2655.md
+++ b/p8105_hw2_NL2655.md
@@ -9,14 +9,14 @@ Nankun
 library(tidyverse)
 ```
 
-    ## -- Attaching packages -------------------------------------------------------------- tidyverse 1.2.1 --
+    ## -- Attaching packages --------------------------------------------------------- tidyverse 1.2.1 --
 
     ## √ ggplot2 3.2.1     √ purrr   0.3.2
     ## √ tibble  2.1.3     √ dplyr   0.8.3
     ## √ tidyr   1.0.0     √ stringr 1.4.0
     ## √ readr   1.3.1     √ forcats 0.4.0
 
-    ## -- Conflicts ----------------------------------------------------------------- tidyverse_conflicts() --
+    ## -- Conflicts ------------------------------------------------------------ tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -156,6 +156,7 @@ snp =
   read_csv("Data/fivethirtyeight_datasets/snp.csv") %>% 
 janitor::clean_names() %>% 
   separate(date, c("month", "day", "year"))%>% 
+  select(-day) %>% 
   arrange(year, as.integer(month)) %>% 
     mutate(
     month = as.numeric(month),
@@ -173,17 +174,107 @@ janitor::clean_names() %>%
 snp
 ```
 
-    ## # A tibble: 787 x 4
-    ##    month     day   year  close
-    ##    <chr>     <chr> <chr> <dbl>
-    ##  1 January   3     1950   17.0
-    ##  2 February  1     1950   17.2
-    ##  3 March     1     1950   17.3
-    ##  4 April     3     1950   18.0
-    ##  5 May       1     1950   18.8
-    ##  6 June      1     1950   17.7
-    ##  7 July      3     1950   17.8
-    ##  8 August    1     1950   18.4
-    ##  9 September 1     1950   19.5
-    ## 10 October   2     1950   19.5
+    ## # A tibble: 787 x 3
+    ##    month     year  close
+    ##    <chr>     <chr> <dbl>
+    ##  1 January   1950   17.0
+    ##  2 February  1950   17.2
+    ##  3 March     1950   17.3
+    ##  4 April     1950   18.0
+    ##  5 May       1950   18.8
+    ##  6 June      1950   17.7
+    ##  7 July      1950   17.8
+    ##  8 August    1950   18.4
+    ##  9 September 1950   19.5
+    ## 10 October   1950   19.5
     ## # ... with 777 more rows
+
+## clean unemployment
+
+``` r
+unemployment = 
+  read_csv("Data/fivethirtyeight_datasets/unemployment.csv") %>% 
+  janitor::clean_names() %>% 
+  pivot_longer(jan:dec,
+    names_to = "month"
+  ) %>% 
+  mutate( 
+    year = as.character(year),
+    month = recode(month,
+    "jan" = "January",
+    "feb" = "February",
+    "mar" = "March",
+    "apr" = "April",
+    "may" = "May",
+    "jun" = "June",
+    "jul" = "July",
+    "aug" = "August",
+    "sep" = "September",
+    "oct" = "October",
+    "nov" = "November",
+    "dec" = "December"
+  ))
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   Year = col_double(),
+    ##   Jan = col_double(),
+    ##   Feb = col_double(),
+    ##   Mar = col_double(),
+    ##   Apr = col_double(),
+    ##   May = col_double(),
+    ##   Jun = col_double(),
+    ##   Jul = col_double(),
+    ##   Aug = col_double(),
+    ##   Sep = col_double(),
+    ##   Oct = col_double(),
+    ##   Nov = col_double(),
+    ##   Dec = col_double()
+    ## )
+
+``` r
+unemployment
+```
+
+    ## # A tibble: 816 x 3
+    ##    year  month     value
+    ##    <chr> <chr>     <dbl>
+    ##  1 1948  January     3.4
+    ##  2 1948  February    3.8
+    ##  3 1948  March       4  
+    ##  4 1948  April       3.9
+    ##  5 1948  May         3.5
+    ##  6 1948  June        3.6
+    ##  7 1948  July        3.6
+    ##  8 1948  August      3.9
+    ##  9 1948  September   3.8
+    ## 10 1948  October     3.7
+    ## # ... with 806 more rows
+
+## merge
+
+``` r
+snp_pol = 
+  full_join(pols_month, snp, by =c("year", "month"))
+
+Summary_data = 
+  full_join(snp_pol, unemployment, by =c("year", "month"))
+Summary_data
+```
+
+    ## # A tibble: 1,650 x 12
+    ##    year  month gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem president
+    ##    <chr> <chr>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <chr>    
+    ##  1 1947  Janu~      23      51     253      23      45     198 gop      
+    ##  2 1947  Janu~      23      51     253      23      45     198 dem      
+    ##  3 1947  Febr~      23      51     253      23      45     198 gop      
+    ##  4 1947  Febr~      23      51     253      23      45     198 dem      
+    ##  5 1947  March      23      51     253      23      45     198 gop      
+    ##  6 1947  March      23      51     253      23      45     198 dem      
+    ##  7 1947  April      23      51     253      23      45     198 gop      
+    ##  8 1947  April      23      51     253      23      45     198 dem      
+    ##  9 1947  May        23      51     253      23      45     198 gop      
+    ## 10 1947  May        23      51     253      23      45     198 dem      
+    ## # ... with 1,640 more rows, and 3 more variables: value.x <dbl>,
+    ## #   close <dbl>, value.y <dbl>
