--- a/p8105_hw2_NL2655.md
+++ b/p8105_hw2_NL2655.md
@@ -9,14 +9,14 @@ Nankun
 library(tidyverse)
 ```
 
-    ## -- Attaching packages --------------------------------------------------------- tidyverse 1.2.1 --
+    ## -- Attaching packages ------------------------------- tidyverse 1.2.1 --
 
     ## √ ggplot2 3.2.1     √ purrr   0.3.2
     ## √ tibble  2.1.3     √ dplyr   0.8.3
     ## √ tidyr   1.0.0     √ stringr 1.4.0
     ## √ readr   1.3.1     √ forcats 0.4.0
 
-    ## -- Conflicts ------------------------------------------------------------ tidyverse_conflicts() --
+    ## -- Conflicts ---------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -98,6 +98,8 @@ Pa_17_18
     ## 10 October      0      2017    2.12   2018
     ## 11 November     0.11   2017    7.82   2018
     ## 12 December     0.94   2017    6.11   2018
+
+# problem 2
 
 ## clean pols\_month
 
@@ -278,3 +280,124 @@ Summary_data
     ## 10 1947  May        23      51     253      23      45     198 dem      
     ## # ... with 1,640 more rows, and 3 more variables: value.x <dbl>,
     ## #   close <dbl>, value.y <dbl>
+
+# Problem 3
+
+## data cleaning
+
+``` r
+Popular_Baby = read_csv("Data/Popular_Baby_Names.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate_all(toupper) %>% 
+  mutate(
+    ethnicity = replace(ethnicity, ethnicity == "ASIAN AND PACI", "ASIAN AND PACIFIC ISLANDER"),
+    ethnicity = replace(ethnicity, ethnicity == "BLACK NON HISP", "BLACK NON HISPANIC"),
+    ethnicity = replace(ethnicity, ethnicity == "WHITE NON HISP", "WHITE NON HISPANIC")
+  ) %>% 
+  distinct()
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   `Year of Birth` = col_double(),
+    ##   Gender = col_character(),
+    ##   Ethnicity = col_character(),
+    ##   `Child's First Name` = col_character(),
+    ##   Count = col_double(),
+    ##   Rank = col_double()
+    ## )
+
+``` r
+Popular_Baby %>% 
+  count(ethnicity)
+```
+
+    ## # A tibble: 4 x 2
+    ##   ethnicity                      n
+    ##   <chr>                      <int>
+    ## 1 ASIAN AND PACIFIC ISLANDER  2140
+    ## 2 BLACK NON HISPANIC          2186
+    ## 3 HISPANIC                    3564
+    ## 4 WHITE NON HISPANIC          4291
+
+``` r
+Popular_Baby
+```
+
+    ## # A tibble: 12,181 x 6
+    ##    year_of_birth gender ethnicity              childs_first_na~ count rank 
+    ##    <chr>         <chr>  <chr>                  <chr>            <chr> <chr>
+    ##  1 2016          FEMALE ASIAN AND PACIFIC ISL~ OLIVIA           172   1    
+    ##  2 2016          FEMALE ASIAN AND PACIFIC ISL~ CHLOE            112   2    
+    ##  3 2016          FEMALE ASIAN AND PACIFIC ISL~ SOPHIA           104   3    
+    ##  4 2016          FEMALE ASIAN AND PACIFIC ISL~ EMILY            99    4    
+    ##  5 2016          FEMALE ASIAN AND PACIFIC ISL~ EMMA             99    4    
+    ##  6 2016          FEMALE ASIAN AND PACIFIC ISL~ MIA              79    5    
+    ##  7 2016          FEMALE ASIAN AND PACIFIC ISL~ CHARLOTTE        59    6    
+    ##  8 2016          FEMALE ASIAN AND PACIFIC ISL~ SARAH            57    7    
+    ##  9 2016          FEMALE ASIAN AND PACIFIC ISL~ ISABELLA         56    8    
+    ## 10 2016          FEMALE ASIAN AND PACIFIC ISL~ HANNAH           56    8    
+    ## # ... with 12,171 more rows
+
+## Table 1 “Olivia”
+
+``` r
+Olivia_df = 
+Popular_Baby %>% 
+  filter(gender == "FEMALE", childs_first_name == "OLIVIA") %>% 
+  select(year_of_birth, ethnicity, rank) %>% 
+  arrange(year_of_birth) %>% 
+  pivot_wider(
+    names_from = "year_of_birth",
+    values_from = "rank"
+  ) %>% 
+  knitr::kable()
+Olivia_df
+```
+
+| ethnicity                  | 2011 | 2012 | 2013 | 2014 | 2015 | 2016 |
+| :------------------------- | :--- | :--- | :--- | :--- | :--- | :--- |
+| ASIAN AND PACIFIC ISLANDER | 4    | 3    | 3    | 1    | 1    | 1    |
+| BLACK NON HISPANIC         | 10   | 8    | 6    | 8    | 4    | 8    |
+| HISPANIC                   | 18   | 22   | 22   | 16   | 16   | 13   |
+| WHITE NON HISPANIC         | 2    | 4    | 1    | 1    | 1    | 1    |
+
+## Table 2 Most popular boies’ names
+
+``` r
+boy_df =
+  Popular_Baby %>% 
+  filter(gender == "MALE", rank == "1") %>% 
+  select(year_of_birth, childs_first_name, ethnicity) %>% 
+  arrange(year_of_birth) %>% 
+  pivot_wider(
+    names_from = "year_of_birth",
+    values_from = "childs_first_name"
+  ) %>% 
+  knitr::kable()
+boy_df
+```
+
+| ethnicity                  | 2011    | 2012   | 2013   | 2014   | 2015   | 2016   |
+| :------------------------- | :------ | :----- | :----- | :----- | :----- | :----- |
+| ASIAN AND PACIFIC ISLANDER | ETHAN   | RYAN   | JAYDEN | JAYDEN | JAYDEN | ETHAN  |
+| BLACK NON HISPANIC         | JAYDEN  | JAYDEN | ETHAN  | ETHAN  | NOAH   | NOAH   |
+| HISPANIC                   | JAYDEN  | JAYDEN | JAYDEN | LIAM   | LIAM   | LIAM   |
+| WHITE NON HISPANIC         | MICHAEL | JOSEPH | DAVID  | JOSEPH | DAVID  | JOSEPH |
+
+## Scatter plot
+
+``` r
+white_boy =
+  Popular_Baby %>% 
+  filter(gender == "MALE", ethnicity == "WHITE NON HISPANIC", year_of_birth == "2016") %>% 
+  mutate(
+    rank = as.numeric(rank),
+    count = as.numeric(count)
+  ) %>% 
+  ggplot(aes(x = rank, y = count))+
+  geom_point(color = "red")
+white_boy
+```
+
+![](p8105_hw2_NL2655_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
