--- a/p8105_hw2_NL2655.md
+++ b/p8105_hw2_NL2655.md
@@ -9,14 +9,14 @@ Nankun
 library(tidyverse)
 ```
 
-    ## -- Attaching packages ------------------------------- tidyverse 1.2.1 --
+    ## -- Attaching packages ---------------------------------- tidyverse 1.2.1 --
 
     ## √ ggplot2 3.2.1     √ purrr   0.3.2
     ## √ tibble  2.1.3     √ dplyr   0.8.3
     ## √ tidyr   1.0.0     √ stringr 1.4.0
     ## √ readr   1.3.1     √ forcats 0.4.0
 
-    ## -- Conflicts ---------------------------------- tidyverse_conflicts() --
+    ## -- Conflicts ------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -63,6 +63,15 @@ Trash_data
     ## #   homes_powered <dbl>
 
 ``` r
+Trash_data = 
+Trash_data %>%
+  filter(year =="2017") %>% 
+  mutate(
+    sports_balls = as.numeric(sports_balls)
+    )
+```
+
+``` r
 Pa_2017 =
 read_excel("Data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",sheet = "2017 Precipitation", range = "A2:B15")%>% 
   janitor::clean_names() %>% 
@@ -98,6 +107,18 @@ Pa_17_18
     ## 10 October      0      2017    2.12   2018
     ## 11 November     0.11   2017    7.82   2018
     ## 12 December     0.94   2017    6.11   2018
+
+*Description*
+
+The **Trash wheel collection** data contains 55 observations in
+resulting. The missing dumpster row has been removed, and number of
+sports balls was rounded to the nearest intergre. The resulting data can
+be seen as first table. The **2017 and 2018 precipitation** data
+combination contains 12 observations in resulting. The missing value row
+has been removed, month are converted to a character variable, and two
+datasets are combined. The resulting data can be seen above. the **total
+precipitation in 2018** is 70.33 (in). Also, the **median number of
+sports balls** is 8.
 
 # problem 2
 
@@ -281,6 +302,18 @@ Summary_data
     ## # ... with 1,640 more rows, and 3 more variables: value.x <dbl>,
     ## #   close <dbl>, value.y <dbl>
 
+*Description*
+
+**Summary\_data** are combined from 3 datasets. First, **pol\_month**
+data contains year and month as date, presidents on associated date, the
+number of republican/democratic governors/senators/representatives on
+the associated date. Second, *snp* data contains year and month as date,
+as well as the closing values of the S\&P stock index on the associated
+date. Last **unemployment** data contains percentage of unemployment on
+associated date, also years and month as date.the result data contains
+all variables from three sub\_datas, and have range of year from 1947 to
+1988. the resulting data can be seen above.
+
 # Problem 3
 
 ## data cleaning
@@ -392,12 +425,22 @@ white_boy =
   Popular_Baby %>% 
   filter(gender == "MALE", ethnicity == "WHITE NON HISPANIC", year_of_birth == "2016") %>% 
   mutate(
-    rank = as.numeric(rank),
-    count = as.numeric(count)
+    Name_rank = as.numeric(rank),
+    Number_of_name = as.numeric(count)
   ) %>% 
-  ggplot(aes(x = rank, y = count))+
+  ggplot(aes(x = Name_rank, y = Number_of_name))+
   geom_point(color = "red")
 white_boy
 ```
 
 ![](p8105_hw2_NL2655_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
+
+*Description*
+
+In problem 3, **popular\_baby\_names** data are cleaned and make tables
+and graph. it is being cleaned through change spells to all caps. and
+make up all lack spelling. Table-1 are made on between ethnicities and
+years given that the female name *Olivia*. Table-2 are made by the rank
+1 popularest names each year with each ethnicity. And the graph are made
+between the name counts and the name rank within the male, white
+non-hispanic children born in 2016.
