--- a/p8105_hw2_NL2655.Rmd
+++ b/p8105_hw2_NL2655.Rmd
@@ -24,7 +24,15 @@ Trash_data =
 mutate(
   sports_balls = as.integer(sports_balls))
 Trash_data
+Trash_data = 
+Trash_data %>%
+  filter(year =="2017") %>% 
+  mutate(
+    sports_balls = as.numeric(sports_balls)
+    )
 ```
+
+
 
 ```{r}
 Pa_2017 =
@@ -47,7 +55,12 @@ Pa_17_18 =
 Pa_17_18
 ```
 
+*Description*
+
+The **Trash wheel collection** data contains `r nrow(Trash_data)` observations in resulting. The missing dumpster row has been removed, and number of sports balls was rounded to the nearest intergre. The resulting data can be seen as first table. The **2017 and 2018 precipitation** data combination contains `r nrow(Pa_17_18)` observations in resulting. The missing value row has been removed, month are converted to a character variable, and two datasets are combined. The resulting data can be seen above. the **total precipitation in 2018** is `r sum(pull(Pa_17_18, total.y))` (in). Also, the **median number of sports balls** is `r median(pull (Trash_data, sports_balls))`.
+
 # problem 2
+
 ## clean pols_month
 ```{r}
 pols_month = 
@@ -119,6 +132,11 @@ Summary_data =
 Summary_data
 ```
 
+*Description*
+
+**Summary_data** are combined from 3 datasets. First, **pol_month** data contains year and month as date, presidents on associated date, the number of republican/democratic governors/senators/representatives on the associated date. Second, *snp* data contains year and month as date, as well as the closing values of the S&P stock index on the associated date. Last **unemployment** data contains percentage of unemployment on associated date, also years and month as date.the result data contains all variables from three sub_datas, and have range of year from 1947 to 1988. the resulting data can be seen above.
+
+
 # Problem 3
 ## data cleaning
 ```{r}
@@ -179,4 +197,13 @@ white_boy =
   geom_point(color = "red")
 white_boy
 ```
+
+
+*Description*
+
+In problem 3, **popular_baby_names** data are cleaned and make tables and graph. it is being cleaned through change spells to all caps. and make up all lack spelling. Table-1 are made on between ethnicities and
+years given that the female name *Olivia*. Table-2 are made by the rank 1 popularest names each year with each ethnicity. And the graph are made between the name counts and the name rank within the male, white non-hispanic children born in 2016.
+
+
+
 
